Fix #188 SettingViewDao covered